added a code for a website

--- a/index.html
+++ b/index.html
@@ -3,10 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anshu Singh - Educational & Political Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p> Hello World</p>
-    <link rel="style.css" href="styles.css">
+    <header>
+        <h1>                        Welcome to Anshu Singh's Website            </h1>
+        <nav>
+            <ul id="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Educational Content</a></li>
+                <li><a href="#">Political Articles</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <button id="menu-button">Menu</button>
+        </nav>
+    </header>
+
+    <section class="content">
+        <h2>Educational Content</h2>
+        <p>Welcome to the educational section of Anshu Singh's website. Here, you will find insightful articles, tutorials, and resources on various educational topics.</p>
+    </section>
+
+    <section class="content">
+        <h2>Political Articles</h2>
+        <p>Explore thought-provoking political articles authored by Anshu Singh. Stay informed and engaged with discussions on current affairs, policies, and more.</p>
+    </section>
+
+    <footer>
+        <p>Contact Anshu Singh:</p>
+        <ul>
+            <li>Phone: 7827883285</li>
+            <li>Email: anshu@example.com</li>
+            <li>Address: Delhi, India</li>
+        </ul>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
